# cocktails-rag-mcp

./: .gitignore  README.md  fastmcp.json  pyproject.toml
data/: cocktail_dataset.json  processed_cocktail_dataset.json
notebooks/: eda.ipynb
src/data/: dataio.py
src/db/: db_handler.py
src/mcp/: server.py
src/rag/: rag.py
